--- a/2nd/build.gradle
+++ b/2nd/build.gradle
@@ -1,6 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        key_password = 'lazybones+each'
+        keystore_path = 'C:\\Users\\71971\\.ssh\\android_signed.jks'
+    }
     ext.kotlin_version = '1.3.61'
     repositories {
 //        google()
