--- a/2nd/app/build.gradle
+++ b/2nd/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "androidx.versionedparcelable:versionedparcelable:1.1.0"
 }
