--- a/3rd/app/build.gradle
+++ b/3rd/app/build.gradle
@@ -26,6 +26,7 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            zipAlignEnabled true
         }
     }
     compileOptions {
@@ -37,15 +38,13 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-
     // lottie Android 官网：https://airbnb.io/lottie/#/android
     implementation 'com.airbnb.android:lottie:2.7.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
     // 这里添加了一个外部库，用来选择颜色
     // https://github.com/Pes8/android-material-color-picker-dialog
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
