--- a/4th/app/build.gradle
+++ b/4th/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+        storeFile file(key_path)
+            storePassword key_pass
+            keyAlias 'main'
+            keyPassword key_pass
+        }
+    }
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.bytedance.clockapplication"
@@ -12,8 +20,9 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     buildToolsVersion '29.0.3'
